# libbiji

./: meson.build  meson_options.txt
src/: biji-note-obj.c  meson.build
src/provider/: biji-memo-provider.c
